--- a/.cproject
+++ b/.cproject
@@ -15,17 +15,28 @@
 </extensions>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
-<configuration artifactName="minicsched" buildProperties="" id="cdt.managedbuild.toolchain.gnu.cygwin.base.914246072" name="Cygwin GCC" parent="org.eclipse.cdt.build.core.emptycfg">
+<configuration artifactName="minicsched" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.cygwin.base.914246072" name="Cygwin GCC" parent="org.eclipse.cdt.build.core.emptycfg">
 <folderInfo id="cdt.managedbuild.toolchain.gnu.cygwin.base.914246072.979790645" name="/" resourcePath="">
 <toolChain id="cdt.managedbuild.toolchain.gnu.cygwin.base.1172960134" name="cdt.managedbuild.toolchain.gnu.cygwin.base" superClass="cdt.managedbuild.toolchain.gnu.cygwin.base">
 <targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.Cygwin_PE" id="cdt.managedbuild.target.gnu.platform.cygwin.base.417728365" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.cygwin.base"/>
-<builder id="cdt.managedbuild.target.gnu.builder.cygwin.base.1614864179" managedBuildOn="false" name="Gnu Make Builder.Cygwin GCC" superClass="cdt.managedbuild.target.gnu.builder.cygwin.base"/>
-<tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.base.279539478" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.base"/>
+<builder enableAutoBuild="true" id="cdt.managedbuild.target.gnu.builder.cygwin.base.1614864179" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.cygwin.base"/>
+<tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.base.279539478" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.base">
+<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1567783328" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+</tool>
 <tool id="cdt.managedbuild.tool.gnu.archiver.cygwin.base.445327520" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.cygwin.base"/>
-<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.1776566354" name="Cygwin C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base"/>
-<tool id="cdt.managedbuild.tool.gnu.c.compiler.cygwin.base.1659065623" name="Cygwin C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.cygwin.base"/>
+<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.1776566354" name="Cygwin C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base">
+<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin.509785856" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin"/>
+</tool>
+<tool id="cdt.managedbuild.tool.gnu.c.compiler.cygwin.base.1659065623" name="Cygwin C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.cygwin.base">
+<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.772712862" superClass="cdt.managedbuild.tool.gnu.c.compiler.input.cygwin"/>
+</tool>
 <tool id="cdt.managedbuild.tool.gnu.c.linker.cygwin.base.170021276" name="Cygwin C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.cygwin.base"/>
-<tool id="cdt.managedbuild.tool.gnu.cpp.linker.cygwin.base.1050784692" name="Cygwin C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.cygwin.base"/>
+<tool id="cdt.managedbuild.tool.gnu.cpp.linker.cygwin.base.1050784692" name="Cygwin C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.cygwin.base">
+<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1219211517" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
+<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
+<additionalInput kind="additionalinput" paths="$(LIBS)"/>
+</inputType>
+</tool>
 </toolChain>
 </folderInfo>
 </configuration>
@@ -114,6 +125,9 @@
 </profile>
 </storageModule>
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
